// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`choose 1`] = `
"function MyComp() {
  return test1 ? <span>IfBlock1</span> : test2 ? <span>IfBlock2</span> : <span>ElseBlock</span>;
}"
`;

exports[`choose inside element 1`] = `
"function MyComp() {
  return (
    <span>
      {test1 ? <span>IfBlock1</span> : test2 ? <span>IfBlock2</span> : <span>ElseBlock</span>}
    </span>
  );
}"
`;

exports[`inside jsx 1`] = `
"function MyComp() {
  return (
    <span>
      {Boolean(true) && <React.Fragment>one{'two'}
        <span>three</span>
        <span>four</span>
      </React.Fragment>}
    </span>
  );
}"
`;

exports[`just text children 1`] = `
"function MyComp() {
  return Boolean(thing && otherThing) && <React.Fragment>text</React.Fragment>;
}"
`;

exports[`only otherwise 1`] = `
"function MyComp() {
  return <span>ElseBlock</span>;
}"
`;

exports[`only when 1`] = `
"function MyComp() {
  return test1 ? <span>IfBlock1</span> : test2 ? <span>IfBlock2</span> : null;
}"
`;

exports[`outermost element of return statement 1`] = `
"function MyComp() {
  return Boolean(true) && <React.Fragment>one{'two'}
    <span>three</span>
    <span>four</span>
  </React.Fragment>;
}"
`;

exports[`single child 1`] = `
"function MyComp() {
  return (
    <span>
      {Boolean(true) && <span>four</span>}
    </span>
  );
}"
`;
